--- a/multiple_shape_file/Multiple_Shape_File_dialog_base.ui
+++ b/multiple_shape_file/Multiple_Shape_File_dialog_base.ui
@@ -13,78 +13,95 @@
   <property name="windowTitle">
    <string>CMSFFL</string>
   </property>
-  <widget class="QWidget" name="layoutWidget">
+  <widget class="QWidget" name="">
    <property name="geometry">
     <rect>
-     <x>0</x>
-     <y>7</y>
-     <width>321</width>
-     <height>231</height>
+     <x>1</x>
+     <y>10</y>
+     <width>289</width>
+     <height>186</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
-     <layout class="QVBoxLayout" name="verticalLayout_2">
+     <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <widget class="QLabel" name="input_label">
-          <property name="text">
-           <string>Input Your File:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QLineEdit" name="input_lineEdit"/>
-        </item>
-        <item>
-         <widget class="QToolButton" name="input_toolButton">
-          <property name="text">
-           <string>...</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout_2">
-        <item>
-         <widget class="QLabel" name="type_label">
-          <property name="text">
-           <string>File Type:</string>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <layout class="QVBoxLayout" name="verticalLayout">
-          <item>
-           <widget class="QRadioButton" name="point_radioButton">
-            <property name="text">
-             <string>Point File</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="Polygen_radioButton">
-            <property name="text">
-             <string>Polygen File</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-       </layout>
-      </item>
-      <item>
-       <widget class="QPushButton" name="pushButton">
+       <widget class="QLabel" name="input_label">
         <property name="text">
-         <string>Give me an Example FIle</string>
+         <string>Input Your File:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="input_lineEdit"/>
+      </item>
+      <item>
+       <widget class="QToolButton" name="input_toolButton">
+        <property name="text">
+         <string>...</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item row="1" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout_3">
+      <item>
+       <widget class="QLabel" name="output_label">
+        <property name="text">
+         <string>Select Destination: </string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="output_lineEdit"/>
+      </item>
+      <item>
+       <widget class="QToolButton" name="output_toolButton">
+        <property name="text">
+         <string>...</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </item>
+    <item row="2" column="0">
+     <layout class="QHBoxLayout" name="horizontalLayout_2">
+      <item>
+       <widget class="QLabel" name="type_label">
+        <property name="text">
+         <string>File Type:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <item>
+         <widget class="QRadioButton" name="point_radioButton">
+          <property name="text">
+           <string>Point File</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QRadioButton" name="Polygen_radioButton">
+          <property name="text">
+           <string>Polygen File</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+     </layout>
+    </item>
+    <item row="3" column="0">
+     <widget class="QPushButton" name="pushButton">
+      <property name="text">
+       <string>Give me an Example FIle</string>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0">
      <widget class="QDialogButtonBox" name="button_box">
       <property name="font">
        <font>
